<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_surface"
    android:orientation="vertical"
    android:paddingStart="14dp"
    android:paddingTop="14dp"
    android:paddingEnd="14dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:ellipsize="start"
        android:fontFamily="sans-serif-medium"
        android:gravity="end|bottom"
        android:maxLines="2"
        android:padding="10dp"
        android:scrollHorizontally="true"
        android:text="0"
        android:textColor="@color/calcy_display_text"
        android:textSize="42sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClear"
                style="@style/Widget.CALCY.Button.Action"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="AC"
                android:textSize="19sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOpenParen"
                style="@style/Widget.CALCY.Button.Function"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="(" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCloseParen"
                style="@style/Widget.CALCY.Button.Function"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text=")" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPercent"
                style="@style/Widget.CALCY.Button.Function"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="%" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn7"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn8"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn9"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDiv"
                style="@style/Widget.CALCY.Button.Operator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="÷" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn4"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn5"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn6"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMul"
                style="@style/Widget.CALCY.Button.Operator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="×" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSub"
                style="@style/Widget.CALCY.Button.Operator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn0"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDot"
                style="@style/Widget.CALCY.Button.Number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="." />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBackspace"
                style="@style/Widget.CALCY.Button.Function"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="⌫" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                style="@style/Widget.CALCY.Button.Operator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHistory"
                style="@style/Widget.CALCY.Button.Function"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="HIS"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLandscape"
                style="@style/Widget.CALCY.Button.Function"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text=">"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEqual"
                style="@style/Widget.CALCY.Button.Equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="=" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvHistoryLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClearHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

</LinearLayout>